feat: Implement LED statistics retrieval and display in frontend and backend

--- a/frontend/public/home-page.html
+++ b/frontend/public/home-page.html
@@ -73,43 +73,59 @@
 
                 <div class="led-control-grid">
                     <div class="sensor-card led1">
-                        <div class="card-header">
+                        <div class="led-grid-layout">
                             <span class="sensor-name">LED 1</span>
                             <div class="toggle-switch">
                                 <div class="toggle-slider"></div>
                             </div>
+                            <div class="led-status">TẮT</div>
+                            <div class="led-stats-badge" id="stats-badge-LED1">
+                                <span class="stats-count">0</span>
+                                <span class="stats-label">lần bật</span>
+                            </div>
                         </div>
-                        <div class="led-status">TẮT</div>
                     </div>
 
                     <div class="sensor-card led2">
-                        <div class="card-header">
+                        <div class="led-grid-layout">
                             <span class="sensor-name">LED 2</span>
                             <div class="toggle-switch">
                                 <div class="toggle-slider"></div>
                             </div>
+                            <div class="led-status">TẮT</div>
+                            <div class="led-stats-badge" id="stats-badge-LED2">
+                                <span class="stats-count">0</span>
+                                <span class="stats-label">lần bật</span>
+                            </div>
                         </div>
-                        <div class="led-status">TẮT</div>
                     </div>
 
                     <div class="sensor-card led3">
-                        <div class="card-header">
+                        <div class="led-grid-layout">
                             <span class="sensor-name">LED 3</span>
                             <div class="toggle-switch">
                                 <div class="toggle-slider"></div>
                             </div>
+                            <div class="led-status">TẮT</div>
+                            <div class="led-stats-badge" id="stats-badge-LED3">
+                                <span class="stats-count">0</span>
+                                <span class="stats-label">lần bật</span>
+                            </div>
                         </div>
-                        <div class="led-status">TẮT</div>
                     </div>
 
                     <div class="sensor-card led4">
-                        <div class="card-header">
+                        <div class="led-grid-layout">
                             <span class="sensor-name">LED 4</span>
                             <div class="toggle-switch">
                                 <div class="toggle-slider"></div>
                             </div>
+                            <div class="led-status">TẮT</div>
+                            <div class="led-stats-badge" id="stats-badge-LED4">
+                                <span class="stats-count">0</span>
+                                <span class="stats-label">lần bật</span>
+                            </div>
                         </div>
-                        <div class="led-status">TẮT</div>
                     </div>
                 </div>
 
