--- a/frontend/public/action-history.html
+++ b/frontend/public/action-history.html
@@ -47,11 +47,12 @@
             </div>
 
             <div class="content action-history-page">
-                <div id="action-history-container">
-                    <div class="data-table-section">
-                        <div class="table-card">
-                            <div class="table-header">
-                                <h3>Bảng lịch sử hoạt động</h3>
+                <div class="action-history-grid">
+                    <div id="action-history-container">
+                        <div class="data-table-section">
+                            <div class="table-card">
+                                <div class="table-header">
+                                    <h3>Bảng lịch sử hoạt động</h3>
                                 <div class="table-controls">
                                     <button id="actionManualRefresh" class="refresh-btn">
                                         <i class="fas fa-sync-alt"></i>
@@ -135,6 +136,23 @@
                                     </button>
                                 </div>
                             </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div id="led-stats-container">
+                    <div class="stats-card">
+                        <div class="stats-header">
+                            <h3>Thống kê bật thiết bị trong ngày</h3>
+                            <button id="statsRefresh" class="refresh-btn">
+                                <i class="fas fa-sync-alt"></i>
+                            </button>
+                        </div>
+                        <div class="stats-loading" id="statsLoading" style="display: none;">
+                            <div class="loading-spinner"></div>
+                            <p>Đang tải...</p>
+                        </div>
+                        <div class="stats-content" id="statsContent">
                         </div>
                     </div>
                 </div>
