--- a/frontend/public/home-page.html
+++ b/frontend/public/home-page.html
@@ -30,6 +30,10 @@
                     <i class="fas fa-history"></i>
                     <span>Lịch sử hoạt động</span>
                 </a>
+                <a href="statistics.html" class="nav-item">
+                    <i class="fas fa-chart-bar"></i>
+                    <span>Thống kê</span>
+                </a>
             </nav>
         </div>
 
@@ -81,7 +85,7 @@
                             <div class="led-status">TẮT</div>
                             <div class="led-stats-badge" id="stats-badge-LED1">
                                 <span class="stats-count">0</span>
-                                <span class="stats-label">lần bật</span>
+                                <span class="stats-label">lần bật hôm nay</span>
                             </div>
                         </div>
                     </div>
@@ -95,7 +99,7 @@
                             <div class="led-status">TẮT</div>
                             <div class="led-stats-badge" id="stats-badge-LED2">
                                 <span class="stats-count">0</span>
-                                <span class="stats-label">lần bật</span>
+                                <span class="stats-label">lần bật hôm nay</span>
                             </div>
                         </div>
                     </div>
@@ -109,7 +113,7 @@
                             <div class="led-status">TẮT</div>
                             <div class="led-stats-badge" id="stats-badge-LED3">
                                 <span class="stats-count">0</span>
-                                <span class="stats-label">lần bật</span>
+                                <span class="stats-label">lần bật hôm nay</span>
                             </div>
                         </div>
                     </div>
@@ -123,7 +127,7 @@
                             <div class="led-status">TẮT</div>
                             <div class="led-stats-badge" id="stats-badge-LED4">
                                 <span class="stats-count">0</span>
-                                <span class="stats-label">lần bật</span>
+                                <span class="stats-label">lần bật hôm nay</span>
                             </div>
                         </div>
                     </div>
