--- a/frontend/public/sensor-data.html
+++ b/frontend/public/sensor-data.html
@@ -29,6 +29,10 @@
                     <i class="fas fa-history"></i>
                     <span>Lịch sử hoạt động</span>
                 </a>
+                <a href="statistics.html" class="nav-item">
+                    <i class="fas fa-chart-bar"></i>
+                    <span>Thống kê</span>
+                </a>
             </nav>
         </div>
 
