Refactor and clean up code across multiple files
- Updated action-history-loader.js to fix formatting and ensure proper loading of stats control.
- Removed unused statistics-loader.js file.
- Improved formatting in api.js for better readability.
- Enhanced CSS styles in main.css for consistency and readability, including adjustments to gradients and hover effects.
- Cleaned up pages.css for better organization and readability of styles.
- Refactored led-stats-panel.js for improved readability and consistency in string handling and DOM manipulation.

--- a/frontend/public/action-history.html
+++ b/frontend/public/action-history.html
@@ -54,9 +54,9 @@
             <div class="content action-history-page">
                 <div id="action-history-container">
                     <div class="data-table-section">
-                            <div class="table-card">
-                                <div class="table-header">
-                                    <h3>Bảng lịch sử hoạt động</h3>
+                        <div class="table-card">
+                            <div class="table-header">
+                                <h3>Bảng lịch sử hoạt động</h3>
                                 <div class="table-controls">
                                     <button id="actionManualRefresh" class="refresh-btn">
                                         <i class="fas fa-sync-alt"></i>
@@ -91,7 +91,8 @@
                                     </div>
                                     <div class="search-input-group">
                                         <i class="fas fa-search"></i>
-                                        <input type="text" id="actionHistorySearchInput" placeholder="Tìm kiếm theo thời gian">
+                                        <input type="text" id="actionHistorySearchInput"
+                                            placeholder="Tìm kiếm theo thời gian">
                                         <button id="actionHistoryClearSearch" class="clear-btn" style="display: none;">
                                             <i class="fas fa-times"></i>
                                         </button>
