--- a/frontend/public/sensor-data.html
+++ b/frontend/public/sensor-data.html
@@ -80,7 +80,8 @@
                                 </div>
                                 <div class="search-input-group">
                                     <i class="fas fa-search"></i>
-                                    <input type="text" id="tableSearchInput" placeholder="Tìm kiếm dữ liệu (VD: 32.5, 00:17:07 21/09/2025)">
+                                    <input type="text" id="tableSearchInput"
+                                        placeholder="Tìm kiếm dữ liệu (VD: 32.5, 00:17:07 21/09/2025)">
                                     <button id="clearSearch" class="clear-btn" style="display: none;">
                                         <i class="fas fa-times"></i>
                                     </button>
