refactor: Add threshold icons to sensor cards and enhance styling for improved UI consistency

--- a/frontend/public/home-page.html
+++ b/frontend/public/home-page.html
@@ -58,6 +58,9 @@
                             <span class="sensor-name">Cảm biến nhiệt độ</span>
                         </div>
                         <div class="sensor-value">--°C</div>
+                        <div class="threshold-stat-icon temperature">
+                            <i class="fas fa-thermometer-half"></i>
+                        </div>
                     </div>
 
                     <div class="sensor-card light">
@@ -65,6 +68,9 @@
                             <span class="sensor-name">Cảm biến ánh sáng</span>
                         </div>
                         <div class="sensor-value">--%</div>
+                        <div class="threshold-stat-icon light">
+                            <i class="fas fa-sun"></i>
+                        </div>
                     </div>
 
                     <div class="sensor-card humidity">
@@ -72,6 +78,9 @@
                             <span class="sensor-name">Cảm biến độ ẩm</span>
                         </div>
                         <div class="sensor-value">--%</div>
+                        <div class="threshold-stat-icon humidity">
+                            <i class="fas fa-tint"></i>
+                        </div>
                     </div>
                 </div>
 
